--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -16,6 +16,7 @@
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
     <![endif]-->
+    <link rel="stylesheet" href="static/css/xcConfirm.css">
 </head>
 
 <body>
@@ -397,6 +398,7 @@
 <script src="static/jq/showitems.js"></script>
 <script src="static/jq/store.js"></script>
 <script src="static/jq/tool.js"></script>
+<script src="static/js/xcConfirm.js"></script>
 </body>
 
 </html>
