--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -139,7 +139,7 @@
                         <ul class="nav navbar-nav clearfix vcenter">
                             
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="SellerMessage.html"><h5>个人信息</h5></a>
+                            <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
                         </ul>
                         <ul class="nav-language list-inline">
