--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -12,8 +12,6 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
-    <script type="text/javascript" src="static/js/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="static/js/area_hzb.js"></script>
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
@@ -290,12 +288,10 @@
                                 			</div>
                                 			<div class="col-2">
                                     			<div class="woocommerce-shipping-fields">
-                                        			<h3>添加个人头像</h3>
-                                                    <p>&nbsp;</p>
-                                        			<p class="form-row form-row">
-                                           				<input type="file" name="sIcon" class="webuploader-element-invisible" multiple accept="image/*" >
-                                            			<!--上传头像模块，s_icon/////////////////////////////////////////////////////////////-->
-                                        			</p>
+                                                    <h3>上传个人头像</h3>
+                                                    <input id="sIcon" type="hidden"/>
+                                                    <div id="huixian"></div>
+                                                    <input id="load" name="Photos" type="file" onchange="upload1(this.files)" multiple style="height: 280px;width: 250px;position: absolute;left: 530px;top: 200px"/>
                                     			</div>
                                 			</div>
                             			</div>
@@ -435,6 +431,8 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/seller.js"></script>
+<script type="text/javascript" src="static/js/area_hzb.js"></script>
+<script src="static/jq/ajaxfileupload.js"></script>
 
 </body>
 
