--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -12,10 +12,6 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" href="static/wt/css/master.css">
     <link rel="icon" type="image/x-icon" href="static/wt/images/favicon.ico">
-    <script type="text/javascript" src="static/js/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="static/js/area_hzb.js"></script>
-    <script src="static/js/seller.js"></script>
-    <script src="static/jq/ajaxfileupload.js"></script>
     <!--[if lt IE 9 ]>
     <script src="assets/js/separate-js/html5shiv-3.7.2.min.js" type="text/javascript"></script>
     <meta content="no" http-equiv="imagetoolbar">
@@ -263,10 +259,9 @@
                                 <div class="col-2">
                                     <div class="woocommerce-shipping-fields">
                                         <h3>可修改个人头像</h3>
-                                            <p class="form-row form-row">
-                                                <input type="file" name="Photos" id="uploadPhotoId" onchange="uploadPhoto()" required="required">
-                                            </p>
-                                            <div style="width:200px; height:200px; border:none; overflow:hidden;" id="photo"></div>
+                                        <input id="sIcon" type="hidden"/>
+                                        <div id="huixian"></div>
+                                        <input id="load" name="Photos" type="file" onchange="upload(this.files)" multiple style="height: 280px;width: 250px;position: absolute;left: 610px;top: 70px"/>
                                     </div>
                                 </div>
                             </div>
@@ -394,24 +389,14 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<!--<script type="text/javascript" src="static/js/jquery-1.7.1.min.js"></script>-->
+<script type="text/javascript" src="static/js/area_hzb.js"></script>
+<script src="static/js/seller.js"></script>
+<script src="static/jq/ajaxfileupload.js"></script>
 <script type="text/javascript">
     $(function () {
         display1();
     })
-</script>
-<script type="text/javascript">
-    function  uploadPhoto() {
-        alert("coming")
-        $.ajaxFileUpload({
-            url:"uploadPhoto",
-            secureuri:false,//是否启动安全提交，默认为false
-            fileElementId:"uploadPhotoId",//需要上传的文件ID
-            dataType:'text',
-            success:function (data) {
-                $("#photo").html("<img  width='200px' height='200px' src='"+data+"'/>");
-            }
-        })
-    }
 </script>
 </body>
 
