--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -209,7 +209,7 @@
                             </p>
                             <div class="clear"></div>
                         </form>
-                        <form id="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
+                        <form id="checkout" name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                                 <div class="col-1">
@@ -217,14 +217,14 @@
                                         <!--注册表单/////////////////////////////////////////////////////////////-->
                                         <h3>请输入您的个人信息</h3>
                                         <p class="form-row form-row form-row-first ">
-                                            <label>姓 名(Name)</label>
+                                            <label>昵 称(Name)</label>
                                             <!--用户姓名，u_user_name/////////////////////////////////////////////////////////////-->
-                                            <input type="text" class="input-text " name="uUserName">
+                                            <input type="text" class="input-text " name="uUserName" placeholder="请输入您的昵称" id="uUserName" onblur="checknickname()">
                                         </p>
                                         <p class="form-row form-row form-row-last ">
                                             <!--用户电话号码，u_tel/////////////////////////////////////////////////////////////-->
                                             <label>联系电话(Tel)</label>
-                                            <input type="text" class="input-text " name="uTel">
+                                            <input type="text" class="input-text " name="uTel" placeholder="请输入您的联系电话" id="uTel" onblur="checkphone()">
                                         </p>
                                         <div class="b-filter__group">
                                             <p class="form-row form-row form-row-first">
@@ -242,17 +242,17 @@
                                         <p class="form-row form-row form-row-first">
                                             <!--用户密码，u_password/////////////////////////////////////////////////////////////-->
                                             <label>密 码(Password长度为6~10位)</abbr></label>
-                                            <input type="password" class="input-text " name="uPassword">
+                                            <input type="password" class="input-text " name="uPassword" placeholder="请设置您的密码" id="uPassword" onblur="checkpassword()">
                                         </p>
                                         <p class="form-row form-row form-row-last">
                                             <!--确认密码，需要前端js验证两次密码是否相同/////////////////////////////////////////////////////////////-->
                                             <label>确认密码(Confirm your password)</label>
-                                            <input type="password" class="input-text " name="uPassword2">
+                                            <input type="password" class="input-text " name="uPassword2" placeholder="请再次输入您的密码" id="uPassword2" onblur="recheckpassword()">
                                         </p>
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户默认地址，地址一，u_address1/////////////////////////////////////////////////////////////-->
                                             <label>默认地址(Address)</label>
-                                            <input type="text" class="input-text " name="uAddress1">
+                                            <input type="text" class="input-text " name="uAddress1" placeholder="输入你的详细地址" id="address" onblur="checkaddress()">
                                         </p>
                                     </div>
                                 </div>
@@ -270,7 +270,7 @@
                             <div id="order_review" class="woocommerce-checkout-review-order">
                                 <div id="payment" class="woocommerce-checkout-payment">
                                     <div class="form-row place-order">
-                                        <input type="button" class="button alt" id="place_order" value="注  册 register" data-value="Place order" onclick="register()"/>
+                                            <input type="button" class="button alt" id="place_order" value="注  册 register" data-value="Place order" onclick="checkregister()"/>
                                     </div>
                                 </div>
                             </div>
@@ -395,6 +395,7 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/user.js"></script>
+<script src="static/js/register.js"></script>
 </body>
 </html>
 
