--- a/src/main/webapp/order_confirm.html
+++ b/src/main/webapp/order_confirm.html
@@ -245,7 +245,7 @@
                                         <td>
                                             <!--更新购物车按钮///////////////////////////////////////////////////////////////////////////////////////-->
                                             <input type="submit" class="button" name="update_cart" value="添 加 地 址"
-                                                   disabled>
+                                                   onclick="addAddress()">
                                         </td>
                                     </tr>
                                     </tbody>
