--- a/src/main/webapp/order_eva_detail.html
+++ b/src/main/webapp/order_eva_detail.html
@@ -382,7 +382,7 @@
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
 <!-- Main slider-->
-<script src="static/wt//jquery.sliderPro.min.js"></script>
+<script src="static/wt/js/jquery.sliderPro.min.js"></script>
 <script src="static/js/order_detail.js"></script>
 <script src="static/js/get_param.js"></script>
 <script>
