--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -235,20 +235,29 @@
                                 			<div class="col-1">
                                                     <h3>请输入个人信息</h3>
                                                     <p>&nbsp;</p>
-                                                    <table rules=none>
+                                                    <table frame="void" style="width: 600px">
                                                         <tr>
                                                             <td  colspan="3">
-                                                                <input type="text" style="width: 100%" id="sAccount" placeholder="请输入您的昵称">
+                                                                <input type="text" style="width: 100%" id="sAccount" placeholder="请输入您的昵称" onblur="checkName()">
+                                                            </td>
+                                                            <td>
+                                                                <span id="nameCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
                                                             </td>
                                                         </tr>
                                                         <tr>
                                                             <td colspan="3">
-                                                                <input type="text" style="width: 100%" data-width="100%" id="sPassword" placeholder="请设置您的密码" >
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sPassword" placeholder="请设置您的密码(有6至10位字符组成)" onblur="checkPass()"/>
+                                                            </td>
+                                                            <td>
+                                                                <span id="passCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
                                                             </td>
                                                         </tr>
                                                         <tr>
                                                             <td  colspan="3">
-                                                                <input type="text" style="width: 100%" data-width="100%" id="sPassword_rpt" placeholder="请再次输入您的密码">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sPassword_rpt" placeholder="请再次输入您的密码" onblur="checkRpt()"/>
+                                                            </td>
+                                                            <td>
+                                                                <span id="rptCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
                                                             </td>
                                                         </tr>
                                                         <tr>
@@ -258,30 +267,39 @@
                                                                     <option value="女">女</option>
                                                                 </select>
                                                             </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td colspan="3">
-                                                                <input type="text" style="width: 100%" data-width="100%" id="sTel" placeholder="请输入您的联系电话">
-                                                            </td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td width="30%">
-                                                                <p class="form-row form-row form-row-wide ">
-                                                                    <select id="ddlProvince"/>
-                                                                </p>
-                                                            </td><td width="30%">
-                                                                <p class="form-row form-row form-row-wide ">
-                                                                    <select id="ddlCity"/>
-                                                                </p>
-                                                            </td><td width="30%">
-                                                                <p class="form-row form-row form-row-wide ">
-                                                                    <select id="ddlDistrict" />
-                                                                </p>
+                                                            <td>
+                                                                <p style='color:green;font-size: 70%'><strong>√</strong></p>
                                                             </td>
                                                         </tr>
                                                         <tr>
                                                             <td colspan="3">
-                                                                <input type="text" style="width: 100%" data-width="100%" id="sAddress" placeholder="详细地址：如镇、道路、门牌号、小区等">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sTel" placeholder="请输入您的联系电话" onblur="checkTel()">
+                                                            </td>
+                                                            <td>
+                                                                <span id="telCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td style="width: 135px">
+                                                                <p class="form-row form-row form-row-wide ">
+                                                                    <select id="ddlProvince" style="width: 135px"/>
+                                                                </p>
+                                                            </td><td style="width: 180px">
+                                                                <p class="form-row form-row form-row-wide ">
+                                                                    <select id="ddlCity" style="width: 180px"/>
+                                                                </p>
+                                                            </td><td style="width: 235px">
+                                                                <p class="form-row form-row form-row-wide ">
+                                                                    <select id="ddlDistrict" style="width: 235px"/>
+                                                                </p>
+                                                            </td>
+                                                            <td rowspan="2">
+                                                                <span id="addressCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td colspan="3">
+                                                                <input type="text" style="width: 100%" data-width="100%" id="sAddress" placeholder="详细地址：如镇、道路、门牌号、小区等" onblur="checkAddress()"/>
                                                             </td>
                                                         </tr>
                                                     </table>
@@ -430,9 +448,11 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/check.js"></script>
 <script src="static/js/seller.js"></script>
 <script type="text/javascript" src="static/js/area_hzb.js"></script>
 <script src="static/jq/ajaxfileupload.js"></script>
+
 
 </body>
 
