--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -197,11 +197,14 @@
                                     <div class="woocommerce-billing-fields">
                                         <!--信息表单/////////////////////////////////////////////////////////////-->
                                         <h3>个人信息列表</h3>
-                                        <table rules=none>
+                                        <table rules=none >
                                             <tr>
                                                 <td width="22%"><label>昵称:</label></td>
                                                 <td  colspan="3">
-                                                    <input type="text" style="width: 100%" id="sAccount">
+                                                    <input type="text" style="width: 100%" id="sAccount" onblur="checkName()"/>
+                                                </td>
+                                                <td>
+                                                    <span id="nameCheck"><p style='color:green;font-size: 70%'><strong>√</strong></p></p></span>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -212,34 +215,42 @@
                                                         <option value="女">女</option>
                                                     </select>
                                                 </td>
+                                                <td>
+                                                    <p style='color:green;font-size: 70%'><strong>√</strong></p>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td width="22%"><label>联系电话:</label></td>
                                                 <td colspan="3">
-                                                    <input type="text" style="width: 100%" data-width="100%" id="sTel">
+                                                    <input type="text" style="width: 100%" data-width="100%" id="sTel" onblur="checkTel()"/>
+                                                </td>
+                                                <td>
+                                                    <span id="telCheck"><p style='color:green;font-size: 70%'><strong>√</strong></p></span>
                                                 </td>
                                             </tr>
                                             <tr>
-                                                <td width="10%" rowspan="2">
-                                                    <label>地址：</label>
+                                                <td style="width: 100px" rowspan="2">
+                                                    <label style="width: 100px">地址：</label>
                                                 </td>
-                                                <td width="30%">
+                                                <td style="width: 180px">
                                                     <p class="form-row form-row form-row-wide ">
-                                                        <select id="ddlProvince"/>
+                                                        <select id="ddlProvince" style="width: 180px"/>
                                                     </p>
-                                                </td><td width="30%">
+                                                </td><td style="width: 180px">
                                                 <p class="form-row form-row form-row-wide ">
-                                                    <select id="ddlCity"/>
+                                                    <select id="ddlCity" style="width: 180px"/>
                                                 </p>
-                                            </td><td width="30%">
+                                            </td><td style="width: 180px">
                                                 <p class="form-row form-row form-row-wide ">
-                                                    <select id="ddlDistrict" />
+                                                    <select id="ddlDistrict" style="width: 180px"/>
                                                 </p>
                                             </td>
-                                            </tr>
+                                                <td rowspan="2">
+                                                    <span id="addressCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
+                                                </td>
                                             <tr>
                                                 <td colspan="3">
-                                                    <input type="text" style="width: 100%" data-width="100%" id="sAddress" placeholder="详细地址：如镇、道路、门牌号、小区等">
+                                                    <input type="text" style="width: 100%" data-width="100%" id="sAddress" placeholder="详细地址：如镇、道路、门牌号、小区等" onblur="checkAddress()"/>
                                                 </td>
                                             </tr>
                                             <tr>
@@ -393,6 +404,7 @@
 <script type="text/javascript" src="static/js/area_hzb.js"></script>
 <script src="static/js/seller.js"></script>
 <script src="static/jq/ajaxfileupload.js"></script>
+<script src="static/js/check.js"></script>
 <script type="text/javascript">
     $(function () {
         display1();
