--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -191,8 +191,8 @@
             </div>
             <div class="row">
             	<div class="woocommerce">                      
-                	<div class="col-md-5 col-md-offset-1">
-                		<div class="tabs-type-2"  style="width:1000px;">
+                	<div class="col-md-5 col-md-offset-1" style="width: 1500px">
+                		<div class="tabs-type-2"  style="width:1000px;float:left">
                     		<ul class="nav">
                         		<li class="active"><a href="#description" data-toggle="tab" style="font-size:20px">登 陆 (Login)</a>
                             	</li>
@@ -206,7 +206,7 @@
                               					enctype="multipart/form-data" _lpchecked="1">
                             			<div class="col2-set" id="seller_login">
                                 			<div class="col-1" style="width: 1000px">
-                                                <h3 style="float:right;margin-right: 350px">请输入您的账号和密码</h3>
+                                                <h3 style="float:right;margin-right: 370px">请输入您的账号和密码</h3>
                                     			<div class="woocommerce-billing-fields" style="float:right;margin-right: 250px">
                                                     <p>&nbsp;</p>
                                         			<p class="form-row form-row form-row-wide">
@@ -304,12 +304,12 @@
                                                         </tr>
                                                     </table>
                                 			</div>
-                                			<div class="col-2">
-                                    			<div class="woocommerce-shipping-fields">
+                                			<div class="col-2" style="float:right;">
+                                    			<div class="woocommerce-shipping-fields"  style="height:500px;float:right;margin-right: 80px">
                                                     <h3>上传个人头像</h3>
                                                     <input id="sIcon" type="hidden"/>
                                                     <div id="huixian"></div>
-                                                    <input id="load" name="Photos" type="file" onchange="upload1(this.files)" multiple style="height: 280px;width: 250px;position: absolute;left: 530px;top: 200px"/>
+                                                    <input id="load" name="Photos" type="file" onchange="upload1(this.files)" multiple style="height: 280px;width: 250px;position: absolute;left: 780px;top: 200px"/>
                                     			</div>
                                 			</div>
                             			</div>
