--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -268,11 +268,11 @@
                                     </div>
                                 </div>
                                 <div class="col-2">
-                                    <div class="woocommerce-shipping-fields">
+                                    <div class="woocommerce-shipping-fields" style="float: right;margin-right: 80px">
                                         <h3>可修改个人头像</h3>
                                         <input id="sIcon" type="hidden"/>
                                         <div id="huixian"></div>
-                                        <input id="load" name="Photos" type="file" onchange="upload(this.files)" multiple style="height: 280px;width: 250px;position: absolute;left: 610px;top: 70px"/>
+                                        <input id="load" name="Photos" type="file" onchange="upload(this.files)" multiple style="height: 280px;width: 250px;position: absolute;left: 900px;top: 70px"/>
                                     </div>
                                 </div>
                             </div>
