--- a/src/main/webapp/ChangePassword.html
+++ b/src/main/webapp/ChangePassword.html
@@ -154,9 +154,9 @@
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="SellerLogin">登 陆</a>
+                            <li><a href="seller_login.html">登 陆</a>
                             </li>
-                            <li><a href="#">退 出</a>
+                            <li><a onclick="exit()">退 出</a>
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
@@ -177,13 +177,11 @@
                 <div class="col-xs-12">
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
-                            <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><a href=""><h4>修改个人密码</h4></a>
+                            <li><h4>修改个人密码</h4></a>
                             </li>
                         </ol>
                     </div>
                     <div class="section-title-page section-title-page_mod-a">
-                        <!--第二行文字/////////////////////////////////////////////////////////////-->
                         <h1 class="ui-title-page">C h a n g e P a s s w o r d</h1>
                     </div>
                 </div>
@@ -191,46 +189,44 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="woocommerce">
-                       
-                        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
-                              enctype="multipart/form-data" _lpchecked="1">
-                            <div class="col2-set" id="customer_details">
-                            <!-- 信息显示 -->
-                                <div class="col-1">
-                                    <div class="woocommerce-billing-fields"> 
-                                    	<h3>请输入密码</h3>                                   
-                                        <p class="form-row form-row form-row-wide ">
-                                        	
-                                            <!--商家旧密码，/////////////////////////////////////////////////////////////-->
-                                            <label>旧 密 码 (Old Password)</label>
-                                            <input type="text" class="input-text " name="oPassword">
-                                        </p>
-                                        <p class="form-row form-row form-row-wide ">
-                                            <!--商家新密码，）/////////////////////////////////////////////////////////////-->
-                                            <label>新 密 码 (New Password）</label>
-                                            <input type="text" class="input-text " name="nPassword">
-                                        </p>                      	
-                                        <div class="clear"></div>
-                                    </div>
-                                </div>                                
-                            </div>
-                            <!--<h3 id="order_review_heading">确认无误，保存</h3>-->
-                            <div id="order_review" class="woocommerce-checkout-review-order">
 
-                                <div id="payment" class="woocommerce-checkout-payment">
+                        <table frame="void" style="width: 600px;align:center;">
+                            <tr>
+                                <td colspan="2">
+                                    <input id="sTel" type="text" style="width: 100%" placeholder="请输入您的手机号码" onblur="checkTel()"/>
+                                </td>
+                                <td>
+                                    <span id="telCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <input type="text" style="width: 100%" data-width="100%" id="sPassword" placeholder="请设置您的密码(有6至10位字符组成)" onblur="checkPass()"/>
+                                </td>
+                                <td>
+                                    <span id="passCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td  colspan="2">
+                                    <input type="text" style="width: 100%" data-width="100%" id="sPassword_rpt" placeholder="请再次输入您的密码" onblur="checkRpt()"/>
+                                </td>
+                                <td>
+                                    <span id="rptCheck"><p style='color:black;font-size: 100%'><strong>+</strong></p></span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td style="width: 280px">
+                                    <input type="button" class="button alt" value="确 认 修 改"
+                                           data-value="Place order" onclick="update_password()" style="line-height:1.3;border:0"/>
+                                </td>
+                                <td style="width: 280px">
+                                    <input type="button" class="button alt" value="返 回 个 人 信 息"
+                                           data-value="Place order" onclick="window.history.back(-1)" style="line-height:1.3;border:0"/>
+                                </td>
+                            </tr>
+                        </table>
 
-                                    <div class="form-row place-order">
-
-                                        <input type="submit" class="button alt" id="place_order" value="确 认 Save"
-                                               data-value="Place order"/>
-                                    </div>
-                                    <div class="form-row place-order">
-                                        <input type="button" class="button alt" id="place_order" value="返 回 Return"
-                                               data-value="Place order" style="line-height:1.3;border:0" onclick="window.history.back(-1)"/>                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -355,7 +351,8 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
-
+<script src="static/js/seller.js"></script>
+<script src="static/js/check.js"></script>
 </body>
 
 </html>
