用户修改密码

--- a/src/main/webapp/change_password.html
+++ b/src/main/webapp/change_password.html
@@ -234,7 +234,7 @@
                             </p>
                             <div class="clear"></div>
                         </form>
-                        <form name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
+                        <form id="checkout" name="checkout" method="post" class="checkout woocommerce-checkout" action="checkout/"
                               enctype="multipart/form-data" _lpchecked="1">
                             <div class="col2-set" id="customer_details">
                                 <div class="col-1">
@@ -244,23 +244,23 @@
                                         <p class="form-row form-row form-row-first ">
                                             <label>账户用户名(Name)</label>
                                             <!--用户姓名，u_user_name/////////////////////////////////////////////////////////////-->
-                                            <input type="text" class="input-text " name="uUsername">
+                                            <input type="text" class="input-text " name="uId" id="uId" onblur="checkuId()">
                                         </p>
                                         <p class="form-row form-row form-row-last ">
                                             <!--用户电话号码，u_tel/////////////////////////////////////////////////////////////-->
                                             <label>账户电话号码(Tel)</label>
-                                            <input type="text" class="input-text " name="uTel">
+                                            <input type="text" class="input-text " name="uTel" id="uTel" onblur="checkphone()">
                                         </p>
                                         <div class="clear"></div>
                                         <p class="form-row form-row form-row-first">
                                             <!--用户密码，u_password/////////////////////////////////////////////////////////////-->
                                             <label>新 密 码(Password长度为6~10位)</abbr></label>
-                                            <input type="password" class="input-text " name="uPassword">
+                                            <input type="password" class="input-text " name="uPassword" id="uPassword" onblur="checkpassword()">
                                         </p>
                                         <p class="form-row form-row form-row-last">
                                             <!--确认密码，需要前端js验证两次密码是否相同/////////////////////////////////////////////////////////////-->
                                             <label>确认密码(Confirm your password)</label>
-                                            <input type="password" class="input-text " name="uPassword2">
+                                            <input type="password" class="input-text " name="uPassword2" id="uPassword2" onblur="recheckpassword()">
                                         </p>
 
                                     </div>
@@ -285,8 +285,7 @@
                                     <div class="form-row place-order">
 
                                             <!--确认按钮模块/////////////////////////////////////////////////////////////-->
-                                        <input type="submit" class="button alt" id="place_order" value="确 认 confirm"
-                                               data-value="Place order"/>
+                                        <input type="button" class="button alt" id="place_order" value="确 认 confirm" onclick="checkchangepassword()" data-value="Place order"/>
                                     </div>
                                 </div>
                             </div>
@@ -408,6 +407,8 @@
 <script src="static/wt/js/imagesloaded.pkgd.min.js"></script>
 <script src="static/wt/js/anime.min.js"></script>
 <script src="static/wt/js/main.js"></script>
+<script src="static/js/register.js"></script>
+<script src="static/js/user.js"></script>
 </body>
 </html>
 <!--还没修改完-->
