--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -222,6 +222,10 @@
                                             <label>密 码(Password)</label>
                                             <input type="password" class="input-text " name="uPassword">
                                         </p>
+                                        <br/>
+                                        <div class="woocommerce-info">忘记密码?&nbsp; &nbsp;
+                                            <!--点击此处跳转到登陆界面/////////////////////////////////////////////////////////////-->
+                                            <a href="change_password.html" class="showcoupon">点击此处找回密码</a></div>
                                         <div class="clear"></div>
                                     </div>
                                 </div>
