--- a/src/main/webapp/personal.html
+++ b/src/main/webapp/personal.html
@@ -250,18 +250,18 @@
                                         <p class="form-row form-row form-row-first ">
                                             <label>姓 名(Name)</label>
                                             <!--用户姓名，u_user_name/////////////////////////////////////////////////////////////-->
-                                            <input type="text" class="input-text " id="uUserName" name="uUsername">
+                                            <input type="text" class="input-text " id="uUserName" name="uUsername" onblur="checknickname()">
                                         </p>
                                         <p class="form-row form-row form-row-last ">
                                             <!--用户电话号码，u_tel/////////////////////////////////////////////////////////////-->
                                             <label>联系电话(Tel)</label>
-                                            <input type="text" class="input-text " id="uTel" name="uTel">
+                                            <input type="text" class="input-text " id="uTel" name="uTel" onblur="checkphone()">
                                         </p>
                                         <div class="clear"></div>
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户默认地址，地址一，u_address1/////////////////////////////////////////////////////////////-->
                                             <label>默认地址(必填，Address)</label>
-                                            <input type="text" class="input-text " id="uAddress1" name="uAddress1">
+                                            <input type="text" class="input-text " id="uAddress1" name="uAddress1" onblur="checkaddress()">
                                         </p>
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户地址，地址二，u_address2/////////////////////////////////////////////////////////////-->
@@ -309,7 +309,7 @@
 
                                     <div class="form-row place-order">
 
-                                        <input type="button" class="button alt" id="place_order" value="确 认 修 改 confirm" onclick="personal_update()"
+                                        <input type="button" class="button alt" id="place_order" value="确 认 修 改 confirm" onclick="checkchange()"
                                                data-value="Place order"/>
                                     </div>
                                 </div>
@@ -442,6 +442,7 @@
 <script src="static/wt/js/main.js"></script>
 <script src="static/js/user.js"></script>
 <script src="static/js/session.js"></script>
+<script src="static/js/register.js"></script>
 <script type="text/javascript">
     $(function () {
         var uId=getId();
