--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -252,7 +252,7 @@
                                         <p class="form-row form-row form-row-wide">
                                             <!--用户默认地址，地址一，u_address1/////////////////////////////////////////////////////////////-->
                                             <label>默认地址(Address)</label>
-                                            <input type="text" class="input-text " name="uAddress1" placeholder="输入你的详细地址" id="address" onblur="checkaddress()">
+                                            <input type="text" class="input-text " name="uAddress1" placeholder="输入你的详细地址" id="uAddress1" onblur="checkaddress()">
                                         </p>
                                     </div>
                                 </div>
