--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -57,9 +57,6 @@
                         <li><a href="Refund-Order.html"><span>已退款</span></a></li>
                     </ul>
                 </li>
-                
-				<li><a href="about.html"><span>客服</span></a></li>
-                <li><a href="lookbook.html"><span>数据统计</span></a></li>
             </ul>
         </div>
       </nav>
@@ -128,16 +125,16 @@
                             <!--logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="items-Homepage.html"><h5>主 页</h5></a>
                             </li>
-                            <li><a href="Store.html"><h5>店铺管理</h5></a>
+                            <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
-                            <li><a href="Evaluate.html"><h5>评论管理</h5></a>
+                            <li><a href="seller_evaluation.html"><h5>评论管理</h5></a>
                             </li>
                         </ul>
                     </div>
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-                            
+                            <li><a href="#"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
@@ -150,7 +147,7 @@
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
-                        <a class="navbar-brand scroll" href="home.html">
+                        <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
                             <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
                             <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
