--- a/src/main/webapp/store_add.html
+++ b/src/main/webapp/store_add.html
@@ -59,9 +59,6 @@
                         <li><a href="Refund-Order.html"><span>已退款</span></a></li>
                     </ul>
                 </li>
-
-                <li><a href="about.html"><span>客服</span></a></li>
-                <li><a href="lookbook.html"><span>数据统计</span></a></li>
             </ul>
         </div>
 
@@ -136,16 +133,16 @@
                             </li>
                             <li><a href="Store.html"><h5>店铺信息</h5></a>
                             </li>
-                            <li><a href="Evaluate.html"><h5>评论管理</h5></a>
+                            <li><a href="seller_evaluation.html"><h5>评论管理</h5></a>
                             </li>
                         </ul>
                     </div>
                     <div class="header-navibox-2">
                         <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
                         <ul class="nav navbar-nav clearfix vcenter">
-
+                            <li><a href="#"><h5>客服</h5></a></li>
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
-                            <li><a href="SellerMessage.html"><h5>个人信息</h5></a>
+                            <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
@@ -160,7 +157,7 @@
                             </li>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
-                        <a class="navbar-brand scroll" href="home.html">
+                        <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
                             <img class="normal-logo" src="static/wt/images/logo.png" alt="logo">
                             <img class="scroll-logo hidden-xs" src="static/wt/images/logo.png" alt="logo">
@@ -212,13 +209,11 @@
                                 </div>
                             </div>
                             <div id="order_review" class="woocommerce-checkout-review-order">
-
                                 <div id="payment" class="woocommerce-checkout-payment">
-
                                     <div class="form-row place-order">
                                         <!--确认按钮////////////////////////////////////////////////-->
                                         <input type="button" class="button alt" value="确 认 Save" onclick="onAdd1()"
-                                               data-value="Place order"/>
+                                               data-value="Place order"style="line-height:1.3;border:0"/>
                                     </div>
                                     <div class="form-row place-order">
                                         <input type="button" class="button alt" value="返 回 Return"
